crates/rbx-env/src/commands/snapshots/rbx_env__commands__codegen__tests__json.snap
---
source: crates/rbx-env/src/commands/codegen.rs
expression: generate_json(&envs).unwrap()
---
[
  {
    "env": "development",
    "placeIds": [
      {
        "id": 1002,
        "name": "lobby"
      },
      {
        "id": 1001,
        "name": "main"
      }
    ],
    "rootPlaceId": 1002,
    "universeId": 100
  },
  {
    "env": "prod",
    "placeIds": [
      {
        "id": 2002,
        "name": "arena"
      },
      {
        "id": 2001,
        "name": "main"
      }
    ],
    "rootPlaceId": 2001,
    "universeId": 200
  }
]
